--- a/cloud-provider-log/src/main/resources/application.yml
+++ b/cloud-provider-log/src/main/resources/application.yml
@@ -11,6 +11,13 @@ spring:
     username: root
     password: 123456
 
+eureka:
+  client:
+    register-with-eureka: true # 将当前服务注册进Eureka服务注册中心，默认为 true
+    fetchRegistry: true # 是否从 Eureka Server 抓取已有的注册服务，默认为 true（ps：单节点无所谓，汲取必须设置为true才能配合ribbon使用负载均衡）。
+    serviceUrl:
+      defaultZone: http://localhost:7001/eureka/
+
 mybatis:
   mapperLocations: classpath:mapper/*.xml # Mybatis 映射文件的扫描路径
   type-aliases-package: com.practice.spring.cloud.entity # 映射文件对应的映射实体路径
