feat:modified log module feature

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>cloud-provider-log</module>
         <module>cloud-common-api</module>
         <module>cloud-eureka-server</module>
+        <module>cloud-provider-user</module>
     </modules>
 
     <!-- 设置统一属性，管理jar包版本 -->
