feat: Add Spring Security

--- a/cloud-eureka-server/pom.xml
+++ b/cloud-eureka-server/pom.xml
@@ -17,6 +17,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <!-- Eureka 服务注册中心认证 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- 引入自己打包的公共包 -->
         <dependency>
             <groupId>org.awesome.spring</groupId>
