--- a/cloud-eureka-server/pom.xml
+++ b/cloud-eureka-server/pom.xml
@@ -17,7 +17,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-        <!-- Eureka 服务注册中心认证 -->
+        <!-- Spring 安全认证 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
