--- a/cloud-provider-user/pom.xml
+++ b/cloud-provider-user/pom.xml
@@ -17,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!-- Eureka 服务提供商 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
