fix: update project structure

--- a/spring-cloud-demo-client/src/main/resources/application.yml
+++ b/spring-cloud-demo-client/src/main/resources/application.yml
@@ -13,12 +13,12 @@ eureka:
       defaultZone: http://localhost:7001/eureka/
 
 # Swagger 属性配置
-swagger:
-  enable: true
-  application-name: ${spring.application.name}
-  version: 1.0
-  description: ${spring.application.name} 整合 swagger 3.0
-  try-host: http://localhost:${server.port}
+#swagger:
+#  enable: true
+#  application-name: ${spring.application.name}
+#  version: 1.0
+#  description: ${spring.application.name} 整合 swagger 3.0
+#  try-host: http://localhost:${server.port}
 
 # 负载均衡全局配置
 # 可以在配置前加上服务应用名称，为指定服务添加配置
