feat: zookeeper service provider

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /a-cloud-eureka-server7002/a-cloud-eureka-server7002.iml
 /a-cloud-eureka-server7003/target/
 /a-cloud-eureka-server7003/a-cloud-eureka-server7003.iml
+/a-cloud-provider-payment-zk/target/
+/a-cloud-provider-payment-zk/a-cloud-provider-payment-zk.iml
