--- a/cloud-config-server/src/main/resources/application.yml
+++ b/cloud-config-server/src/main/resources/application.yml
@@ -7,19 +7,32 @@ spring:
   cloud:
     config:
       server:
-        git: #配置存储配置信息的 Git 仓库
-          uri: https://github.com/littlexiaotimpro/spring-cloud-config-demo.git
-          #username: 私有仓库 用户名称
-          #password: 私有仓库 用户密码
-          #开启启动时直接从git获取配置
-          clone-on-start: true
-          # 配置对应应用名称的子目录中搜索路径
-          # application：代表应用名称，默认为配置文件中的spring.application.name，如果配置了spring.cloud.config.name，则为该名称；
-          search-paths: '{application}'
+        native:
+          # 内嵌式配置中心的配置文件扫描路径
+          searchLocations:
+            - classpath:/config/
+#        git: #配置存储配置信息的 Git 仓库
+#          uri: https://github.com/xxx/spring-cloud-config-demo.git
+#          #username: 私有仓库 用户名称
+#          #password: 私有仓库 用户密码
+#          #开启启动时直接从git获取配置
+#          clone-on-start: true
+#          # 配置对应应用名称的子目录中搜索路径
+#          # application：代表应用名称，默认为配置文件中的spring.application.name，如果配置了spring.cloud.config.name，则为该名称；
+#          search-paths: '{application}'
+  profiles:
+    active: native
+
+# actuator 监控组件配置
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 eureka:
   client:
     register-with-eureka: true # 将当前服务注册进Eureka服务注册中心，默认为 true
     fetchRegistry: true # 是否从 Eureka Server 抓取已有的注册服务，默认为 true（ps：单节点无所谓，汲取必须设置为true才能配合ribbon使用负载均衡）。
     serviceUrl:
-      defaultZone: http://admin:123456@server7001.com:7001/eureka/, http://admin:123456@server7002.com:7002/eureka/
+      defaultZone: http://admin:123456@server7001.com:7001/eureka/
