feat: create module of gateway

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /a-cloud-eureka-server7003/a-cloud-eureka-server7003.iml
 /a-cloud-provider-payment-zk/target/
 /a-cloud-provider-payment-zk/a-cloud-provider-payment-zk.iml
+/a-cloud-base-gateway/target/
+/a-cloud-base-gateway/a-cloud-base-gateway.iml
