--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>a-cloud-eureka-server7002</module>
         <module>a-cloud-eureka-server7003</module>
         <module>a-cloud-provider-payment-zk</module>
+        <module>a-cloud-base-gateway</module>
     </modules>
 
     <!-- 设置统一属性，管理jar包版本 -->
@@ -33,6 +34,9 @@
         <log4j.version>2.13.3</log4j.version>
         <lombok.version>1.18.14</lombok.version>
         <swagger.version>3.0.0</swagger.version>
+        <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
+        <spring.cloud.version>Hoxton.SR8</spring.cloud.version>
+        <spring.cloud.alibaba.version>2.2.3.RELEASE</spring.cloud.alibaba.version>
     </properties>
 
     <!-- 依赖管理，子模块继承之后，锁定版本及子module不需要重复定义groupId和version -->
@@ -42,21 +46,21 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.3.4.RELEASE</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR8</version>
+                <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.3.RELEASE</version>
+                <version>${spring.cloud.alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -122,7 +126,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.4.RELEASE</version>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
