feat: 新增sleuth-zipkin-server模块

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /a-cloud-base-gateway/a-cloud-base-gateway.iml
 /a-cloud-consumer-order80-openfeign/target/
 /a-cloud-consumer-order80-openfeign/a-cloud-consumer-order80-openfeign.iml
+/a-cloud-base-sleuth/target/
+/a-cloud-base-sleuth/a-cloud-base-sleuth.iml
